--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         <input id="mNumber" type="text" name="mNumber" required/><br />
 
         <label for="wNumber">Whatsapp Number (if any)</label>
-        <input id="wNumber" type="text" name="wNumber" required/>
+        <input id="wNumber" type="text" name="wNumber" />
                         <label class="checkbox-label">
             <input id="whatsappCheck" type="checkbox" onchange="checkNumber();">
             <span class="checkbox-custom rectangular"></span>
