Added Styling to the heading

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    <h1>Download your profarma from here</h1>
+    <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
+    <h1 class="heading">Download your profarma from here</h1>
     <div class="container">
      
       <form id="form" action="/" method="post">
